--- a/about-us.html
+++ b/about-us.html
@@ -394,7 +394,7 @@
 	<section class="about">
 		<div class="container-fluid">
 			<div class="row justify-content-md-center">
-				<div class="col-lg-6">
+				<div class="col-lg-8">
 					<div class="hero-heading-sec2">
 						<h3 class="wow fadeIn about-heading" data-wow-delay="0.2s ">We create Games & Apps that <br> are seen and heard<br> Loud and clear.</h3> </div>
 				</div>
@@ -541,11 +541,11 @@
 		<div class="container-fluid">
 			<div class="row">
 				<div class="col-lg-6 my-auto">
-				  <h3 class="text-white">Work with the Tech Leader</h3>
-				  <p class="text-white pt-3">Futurealiti is a leading software development and Industrial Automation company working in various fields of IT &amp; helping businesses and industries with technological acceleration. Futurealiti has achieved some remarkable goals within few years and inspired hundreds of our valuable clients from all around the globe by making their ideas into reality. Around 4 years ago, Futurealiti started with a team of two. Now we have 50+ enthusiastic team members who are working hard to compete for big challenges of the future world which makes us one of the best IT and Software companies in Pakistan.</p>
+				  <h3 class="text-white about-work-heading">Work with the Tech Leader</h3>
+				  <p class="text-white pt-3 about-work-text">Futurealiti is a leading software development and Industrial Automation company working in various fields of IT &amp; helping businesses and industries with technological acceleration. Futurealiti has achieved some remarkable goals within few years and inspired hundreds of our valuable clients from all around the globe by making their ideas into reality. Around 4 years ago, Futurealiti started with a team of two. Now we have 50+ enthusiastic team members who are working hard to compete for big challenges of the future world which makes us one of the best IT and Software companies in Pakistan.</p>
 				</div>
 				<div class="col-lg-6">
-				  <img src="images/about/about-work.png" alt="" class="about-work-img d-block mx-auto">
+				  <img src="images/about/about-work.png" alt="About Us" class="about-work-img d-block mx-auto img-fluid">
 				</div>
 			</div>
 		</div>
@@ -557,19 +557,19 @@
 		<div class="container">
 			<div class="row">
 				<div class="col-sm-12 col-md-4">
-					<div class="item wow fadeInUp" data-wow-delay="400ms">
+					<div class="item wow fadeInUp about-item1" data-wow-delay="400ms">
                         <h4 class="text-white">Client-Oriented</h4>
                         <p  class="text-white">It’s not about the product. Organizations that excel in customer service see their job as helping customers, not selling or servicing a product. Instead, the product is the vehicle for making the biggest impact on people in a specific industry.</p>
                     </div>
 				</div>
 				<div class="col-sm-12 col-md-4">
-					<div class="item wow fadeInUp" data-wow-delay="400ms">
+					<div class="item wow fadeInUp about-item2" data-wow-delay="400ms">
                         <h4 class="text-white">Mission</h4>
                         <p class="text-white"> Our Mission guides every aspect of our business by describing what we need to accomplish to continue achieving sustainable, quality growth. Our Mission is to provide outstanding experiences to our guests, rewarding opportunities for our team, and superior value to our shareholders.</p>
                     </div>
 				</div>
 				<div class="col-sm-12 col-md-4">
-					<div class="item wow fadeInUp" data-wow-delay="400ms">
+					<div class="item wow fadeInUp about-item3" data-wow-delay="400ms">
                         <h4 class="text-white">Vision</h4>
                         <p class="text-white"> Our Vision declares our purpose as a company and serves as the standard against which we weigh our actions and decisions.Our Vision is to be the leading gaming, entertainment and hospitality company in our chosen markets by providing superior entertainment value and exceptional experiences.</p>
                     </div>
