--- a/clients.html
+++ b/clients.html
@@ -170,10 +170,10 @@
 															<li><a href="#">2D & 3D Design</a></li>
 														</ul>
 													</li>
-											</ul>
+												</ul>
 											</div>
 											<div class="sub-menu-column">
-											<ul>
+												<ul>
 													<li><a href="#">Virtual Reality Development</a>
 														<ul class="submenu">
 															<li><a href="#">Virtual Reality</a></li>
@@ -192,7 +192,7 @@
 															<li><a href="#">Industrial Automation</a></li>
 														</ul>
 													</li>
-											</ul>
+												</ul>
 											</div>
 											<div class="sub-menu-column">
 												<ul>
@@ -373,6 +373,7 @@
 		</div>
 	</header>
 	<!--End Header -->
+	
 	<!--Breadcrumb Area-->
 	<section class="breadcrumb-area banner-2">
 		<div class="text-block">
@@ -414,57 +415,57 @@
 					<div class="item">
 						<div class="row">
 							<div class="col-sm-6 col-md-4">
-								<img src="images/clients/client-1.png">
-								<h5 class="text-left" style="margin-top: 30px; margin-bottom: 15px;">Activity Intelligence </h5>
-								<p class="text-justify pt-2">An R&amp;D organization wished to develop a platform that allowed participants to share and collect their data on different activities and survey. App Maisters team helped to develop a well-integrated cost-effective</p>
+								<img src="images/blog/firebase-vs-aws-blog-img-1.jpg">
+								<h5 class="text-left my-4">Firebase vs AWS: Which one is the better choice in 2022?</h5>
+								<p class="text-justify pt-2">So, it appears that you have finally chosen to investigate becoming serverless.</p>
 							</div>
 							<div class="col-sm-6 col-md-4">
-								<img src="images/clients/client-2.png">
-								<h5 class="text-left" style="margin-top: 30px; margin-bottom: 15px;">Advanced Technical &amp; Educational Consultants </h5>
-								<p class="text-justify pt-2">Based in South Florida, Advanced Technical and Educational Consultants (ATEC) specialize in providing design, development and delivery of state-of-the-art Department</p>
+								<img src="images/blog/rise-of-ecommerce-in-metaverse-blog-img.jpg">
+								<h5 class="text-left my-4">eCommerce's Rise in the World of Metaverse</h5>
+								<p class="text-justify pt-2">There's no denying that the Metaverse is perplexing.</p>
 							</div>
 							<div class="col-sm-6 col-md-4">
-								<img src="images/clients/client-3.png">
-								<h5 class="text-left" style="margin-top: 30px; margin-bottom: 15px;">Anthem Bagel</h5>
-								<p class="text-justify pt-2">This application is best suitable for the people who are foodie by nature and have cravings for delicious meals. Food is no doubt an easily accessible things</p>
-							</div>
-						</div>
-					</div>
-					<div class="item">
-						<div class="row">
-							<div class="col-sm-6 col-md-4">
-								<img src="images/clients/client-1.png">
-								<h5 class="text-left" style="margin-top: 30px; margin-bottom: 15px;">Activity Intelligence </h5>
-								<p class="text-justify pt-2">An R&amp;D organization wished to develop a platform that allowed participants to share and collect their data on different activities and survey. App Maisters team helped to develop a well-integrated cost-effective</p>
-							</div>
-							<div class="col-sm-6 col-md-4">
-								<img src="images/clients/client-2.png">
-								<h5 class="text-left" style="margin-top: 30px; margin-bottom: 15px;">Advanced Technical &amp; Educational Consultants </h5>
-								<p class="text-justify pt-2">Based in South Florida, Advanced Technical and Educational Consultants (ATEC) specialize in providing design, development and delivery of state-of-the-art Department</p>
-							</div>
-							<div class="col-sm-6 col-md-4">
-								<img src="images/clients/client-3.png">
-								<h5 class="text-left" style="margin-top: 30px; margin-bottom: 15px;">Anthem Bagel</h5>
-								<p class="text-justify pt-2">This application is best suitable for the people who are foodie by nature and have cravings for delicious meals. Food is no doubt an easily accessible things</p>
+								<img src="images/blog/nft-blog-img.jpg">
+								<h5 class="text-left my-4">NFT (Non-fungible token)</h5>
+								<p class="text-justify pt-2">An NFT game blends traditional gaming ideas with novel game methods.</p>
 							</div>
 						</div>
 					</div>
 					<div class="item">
 						<div class="row">
 							<div class="col-sm-6 col-md-4">
-								<img src="images/clients/client-1.png">
-								<h5 class="text-left" style="margin-top: 30px; margin-bottom: 15px;">Activity Intelligence </h5>
-								<p class="text-justify pt-2">An R&amp;D organization wished to develop a platform that allowed participants to share and collect their data on different activities and survey. App Maisters team helped to develop a well-integrated cost-effective</p>
+								<img src="images/blog/firebase-vs-aws-blog-img-1.jpg">
+								<h5 class="text-left my-4">Firebase vs AWS: Which one is the better choice in 2022?</h5>
+								<p class="text-justify pt-2">So, it appears that you have finally chosen to investigate becoming serverless.</p>
 							</div>
 							<div class="col-sm-6 col-md-4">
-								<img src="images/clients/client-2.png">
-								<h5 class="text-left" style="margin-top: 30px; margin-bottom: 15px;">Advanced Technical &amp; Educational Consultants </h5>
-								<p class="text-justify pt-2">Based in South Florida, Advanced Technical and Educational Consultants (ATEC) specialize in providing design, development and delivery of state-of-the-art Department</p>
+								<img src="images/blog/rise-of-ecommerce-in-metaverse-blog-img.jpg">
+								<h5 class="text-left my-4">eCommerce's Rise in the World of Metaverse</h5>
+								<p class="text-justify pt-2">There's no denying that the Metaverse is perplexing.</p>
 							</div>
 							<div class="col-sm-6 col-md-4">
-								<img src="images/clients/client-3.png">
-								<h5 class="text-left" style="margin-top: 30px; margin-bottom: 15px;">Anthem Bagel</h5>
-								<p class="text-justify pt-2">This application is best suitable for the people who are foodie by nature and have cravings for delicious meals. Food is no doubt an easily accessible things</p>
+								<img src="images/blog/nft-blog-img.jpg">
+								<h5 class="text-left my-4">NFT (Non-fungible token)</h5>
+								<p class="text-justify pt-2">An NFT game blends traditional gaming ideas with novel game methods.</p>
+							</div>
+						</div>
+					</div>
+					<div class="item">
+						<div class="row">
+							<div class="col-sm-6 col-md-4">
+								<img src="images/blog/firebase-vs-aws-blog-img-1.jpg">
+								<h5 class="text-left my-4">Firebase vs AWS: Which one is the better choice in 2022?</h5>
+								<p class="text-justify pt-2">So, it appears that you have finally chosen to investigate becoming serverless.</p>
+							</div>
+							<div class="col-sm-6 col-md-4">
+								<img src="images/blog/rise-of-ecommerce-in-metaverse-blog-img.jpg">
+								<h5 class="text-left my-4">eCommerce's Rise in the World of Metaverse</h5>
+								<p class="text-justify pt-2">There's no denying that the Metaverse is perplexing.</p>
+							</div>
+							<div class="col-sm-6 col-md-4">
+								<img src="images/blog/nft-blog-img.jpg">
+								<h5 class="text-left my-4">NFT (Non-fungible token)</h5>
+								<p class="text-justify pt-2">An NFT game blends traditional gaming ideas with novel game methods.</p>
 							</div>
 						</div>
 					</div>
