--- a/index.html
+++ b/index.html
@@ -2073,7 +2073,7 @@
 									<a href="#"><i class="fas fa-comment-dots"></i> (23)</a>
 								</span>
 							</div>
-                            <h4><a href="nft.html">NFT</a></h4>
+                            <h4><a href="nft.html">NFT (Non-fungible token)</a></h4>
                             <p>An NFT game blends traditional gaming ideas with novel game methods.</p>
                         </div>
                     </div>
