--- a/career.html
+++ b/career.html
@@ -374,92 +374,187 @@
 	</header>
 	<!--End Header -->
 
-	<!--Breadcrumb Area-->
-	<section class="breadcrumb-area banner-6">
+	<!--Breadcrumb Area -->
+	<section class="breadcrumb-area banner-2">
 		<div class="text-block">
 			<div class="container">
-				<div class="row">
-					<div class="col-lg-12 v-center">
-						<div class="bread-inner">
-							<div class="bread-menu wow fadeInUp" data-wow-delay=".2s">
-								<ul>
-									<li><a href="index.html">Home</a></li>
-									<li><a href="#">Career</a></li>
-								</ul>
-							</div>
-							<div class="bread-title wow fadeInUp" data-wow-delay=".5s">
-								<h2>Job Openings</h2> </div>
+				<div class="row justify-content-md-center">
+					<div class="col-lg-8">
+						<div class="hero-heading">
+							<h3 class="wow fadeIn" data-wow-delay="0.2s">Careers</h3>
+							<p>You’ll be part of an inclusive and diverse team, and you’ll receive the training you need to help keep you and us greater than.</p>
 						</div>
 					</div>
 				</div>
 			</div>
 		</div>
 	</section>
-	<!--End Breadcrumb Area-->
+	<!--End Breadcrumb -->
+
+	<!--Start Recruitment -->
+	<section class="recruitment-process py-3 py-md-4 py-lg-4">
+		<div class="container">
+			<div class="row justify-content-center pt-3">
+				<div class="col-lg-8">
+					<h2 class="placea-process-heading">Our recruitment process</h2>
+					<p class="placea-process-text">Cubix aims to build high-quality software while also fostering an enjoyable work environment that allows everyone the opportunity to reach their highest potential.</p>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-sm-12 col-md-4">
+					<img src="images/icons/application.svg" class="career-icons">
+					<h4 class="py-3">Application</h4>
+					<p>Submit your application through our website. Your application is being read by real humans.</p>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="images/icons/interview.svg" class="career-icons">
+					<h4 class="py-3">Interview</h4>
+					<p>Let us get familiar with your competencies and experience in the field.</p>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="images/icons/job-offer.svg" class="career-icons">
+					<h4 class="py-3">Offer</h4>
+					<p>Congratulations! You have made it. Sign the agreement and you are on-board with us.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--End Recruitment -->
 
 	<!--Start Career Form -->
-   <section class="about-agencys pad-tb block-1 dark-bg3">
+    <section class="about-agencys block-1 dark-bg3 py-3 py-md-4 py-lg-4">
 		<div class="container">
-			<h4>Use this form to apply at AppsNation, Beyond &amp; Huddle Co-working.</h4>
-			<form action="#" class="mt-3" method="post" enctype="multipart/form-data">
-				<input type="hidden" name="_token" value="I4QOAbzwZkIp575t96lF6cPArbAb2aIlJDgYmpov">
-				<div class="mb-3 mt-3">
-					<label for="name">Your Full Name: <span class="asterick">*</span></label>
-					<input type="text" name="name" class="form-control mt-2" placeholder="" id="name" required=""> </div>
-				<div class="mb-3">
-					<label for="email">Your Email: <span class="asterick">*</span></label>
-					<input type="email" name="email" class="form-control mt-2" placeholder="" id="email" required=""> </div>
-				<div class="mb-3">
-					<label for="phone">Phone Number: <span class="asterick">*</span></label>
-					<input type="tel" name="phone" class="form-control mt-2" placeholder="" id="phone" required=""> </div>
-				<div class="mb-3">
-               <label for="job" class="form-label">Job Role Applying for:</label>
-               <select class="form-select" id="job" name="job">
-                  <option selected="">Select</option>
-						<option value="game-development">Game Development</option>
-						<option value="virtual-reality-development">Virtual Reality Development</option>
-						<option value="augmented-reality-development">Augmented Reality Consultancy</option>
-						<option value="metaverse-development">Metaverse Development</option>
-						<option value="mixed-reality-development">Mixed Reality Development</option>
-						<option value="mobile-apps-development">Mobile Apps Development</option>
-                  <option value="website-development">Website Development</option>
-                  <option value="industrial-automation">Inustrial Automation</option>
-                  <option value="animation-services">Animation Services</option>
-                  <option value="2d-and-3d-design-services">2D & 3D Design Services</option>
-               </select>
-						
-					</select>
+			<div class="row justify-content-center pt-3">
+				<div class="col-lg-8">
+					<h4>Use this form to apply at AppsNation, Beyond &amp; Huddle Co-working.</h4>
+					<form action="#" class="mt-3" method="post" enctype="multipart/form-data">
+						<input type="hidden" name="_token" value="I4QOAbzwZkIp575t96lF6cPArbAb2aIlJDgYmpov">
+
+						<div class="row my-3">
+							<div class="col-sm-12 col-md-6">
+								<label for="name">Your Full Name: <span class="asterick">*</span></label>
+								<input type="text" name="name" class="form-control mt-2" placeholder="" id="name" required="">
+							</div>
+							<div class="col-sm-12 col-md-6">
+								<label for="email">Your Email: <span class="asterick">*</span></label>
+								<input type="email" name="email" class="form-control mt-2" placeholder="" id="email" required="">
+							</div>
+						</div>
+
+						<div class="row my-3">
+							<div class="col-sm-12 col-md-6">
+								<label for="phone">Phone Number: <span class="asterick">*</span></label>
+								<input type="tel" name="phone" class="form-control mt-2" placeholder="" id="phone" required="">
+							</div>
+							<div class="col-sm-12 col-md-6">
+								<label for="job" class="form-label">Job Role Applying for:</label>
+								<select class="form-select" id="job" name="job">
+									<option selected="">Select</option>
+											<option value="game-development">Game Development</option>
+											<option value="virtual-reality-development">Virtual Reality Development</option>
+											<option value="augmented-reality-development">Augmented Reality Consultancy</option>
+											<option value="metaverse-development">Metaverse Development</option>
+											<option value="mixed-reality-development">Mixed Reality Development</option>
+											<option value="mobile-apps-development">Mobile Apps Development</option>
+									<option value="website-development">Website Development</option>
+									<option value="industrial-automation">Inustrial Automation</option>
+									<option value="animation-services">Animation Services</option>
+									<option value="2d-and-3d-design-services">2D & 3D Design Services</option>
+								</select>	
+							</div>
+						</div>
+
+						<div class="row my-3">
+							<div class="col-sm-12">
+								<label for="position" class="pb-2">Position:</label>
+								<br>
+								<div class="form-check form-check-inline">
+									<input class="form-check-input" type="radio" name="position" id="inlineRadio1" value="Full Time">
+									<label class="form-check-label" for="inlineRadio1">Full Time</label>
+								</div>
+								<div class="form-check form-check-inline">
+									<input class="form-check-input" type="radio" name="position" id="inlineRadio2" value="Part Time">
+									<label class="form-check-label" for="inlineRadio2">Part Time</label>
+								</div>
+								<div class="form-check form-check-inline">
+									<input class="form-check-input" type="radio" name="position" id="inlineRadio3" value="Internship">
+									<label class="form-check-label" for="inlineRadio3">Internship</label>
+								</div>
+								<div class="form-check form-check-inline">
+									<input class="form-check-input" type="radio" name="position" id="inlineRadio3" value="Remote">
+									<label class="form-check-label" for="inlineRadio3">Remote</label>
+								</div>
+							</div>
+						</div>
+
+						<div class="row my-3">
+							<div class="col-sm-12">
+								<div class="custom-file">
+									<p>Attach your CV (Max 1.5MB)</p>
+									<input type="file" class="custom-file-input" id="customFile" name="filename">
+									<label class="custom-file-label" for="customFile">Choose file</label>
+								</div>
+							</div>
+						</div>
+
+						<div class="row my-3">
+							<div class="col-sm-12">
+								<button type="submit" name="submit" class="btn btn-primary btn-main bg-btn2">Submit <i class="fas fa-chevron-right fa-icon"></i></button>
+							</div>
+						</div>
+					</form>
 				</div>
-				<div class="mb-3">
-					<label for="position" class="pb-2">Position:</label>
-					<br>
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="position" id="inlineRadio1" value="Full Time">
-						<label class="form-check-label" for="inlineRadio1">Full Time</label>
-					</div>
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="position" id="inlineRadio2" value="Part Time">
-						<label class="form-check-label" for="inlineRadio2">Part Time</label>
-					</div>
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="position" id="inlineRadio3" value="Internship">
-						<label class="form-check-label" for="inlineRadio3">Internship</label>
-					</div>
-					<div class="form-check form-check-inline">
-						<input class="form-check-input" type="radio" name="position" id="inlineRadio3" value="Remote">
-						<label class="form-check-label" for="inlineRadio3">Remote</label>
-					</div>
-				</div>
-				<div class="custom-file mb-3">
-					<p>Attach your CV (Max 1.5MB)</p>
-					<input type="file" class="custom-file-input" id="customFile" name="filename">
-					<label class="custom-file-label" for="customFile">Choose file</label>
-				</div>
-				<button type="submit" name="submit" class="btn btn-primary btn-main bg-btn2">Submit <i class="fas fa-chevron-right fa-icon"></i></button>
-			</form>
+			</div>
 		</div>
 	</section>
 	<!--End Career Form -->
+
+	<!--Start perk -->
+	<section class="perk py-3 py-md-4 py-lg-4">
+		<div class="container">
+			<div class="row justify-content-center pt-3">
+				<div class="col-lg-8">
+					<h2 class="placea-process-heading">Our perks</h2>
+					<p class="placea-process-text">Since loving your job doesn’t pay your expenses, here are some amazing perks offered by Cubix.</p>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-sm-12 col-md-4">
+					<img src="images/icons/bonus.svg" class="career-icons">
+					<h4 class="py-3">Bonuses</h4>
+					<p>Pay rise, promotions, and top opportunities for professional development.</p>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="images/icons/vehicle.svg" class="career-icons">
+					<h4 class="py-3">Vehicle</h4>
+					<p>Company maintained car.</p>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="images/icons/medical.svg" class="career-icons">
+					<h4 class="py-3">Health insurance</h4>
+					<p>We ensure all your healthcare needs, we believe in human right.</p>
+				</div>
+			</div>
+			<div class="row mt-5">
+				<div class="col-sm-12 col-md-4">
+					<img src="images/icons/leaves.svg" class="career-icons">
+					<h4 class="py-3">Parental leaves</h4>
+					<p>When it comes to feelings, work isn’t the priority.</p>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="images/icons/funds.svg" class="career-icons">
+					<h4 class="py-3">Gratuity funds</h4>
+					<p>A company sponsored fund that enables you to maximize benefits.</p>
+				</div>
+				<div class="col-sm-12 col-md-4">
+					<img src="images/icons/training.svg" class="career-icons">
+					<h4 class="py-3">Training</h4>
+					<p>Mentors to guide and support you. Training programs to polish your skills.</p>
+				</div>
+			</div>
+		</div>
+	</section>
+	<!--End Recruitment -->
 
 	<!-- Start Footer -->
 	<footer>
@@ -657,6 +752,8 @@
 	<script src="js/dark-mode.js"></script>
 	<!--common script file-->
 	<script src="js/main.js"></script>
+	<script src="js/font-awsome.js"></script>
+
 	<script>
 	// Add the following code if you want the name of the file appear on select
 	$(".custom-file-input").on("change", function() {
