--- a/contact-us.html
+++ b/contact-us.html
@@ -399,36 +399,40 @@
 				</div>
 				<div class="col-lg-6 my-auto">
 					<h5 class="mt30 mb30">Dial a Call or Drop an Email</h5>
-					<div class="media mt15">
-						<div class="icondive">
-							<img src="images/icons/call.svg" alt="icon">
+					<div class="contact-info mt15">
+						<div class="contact-icon">
+							<i class="fa-solid fa-mobile-screen contact-icons"></i>
 						</div>
-						<div class="media-body getintouchinfo">
-							<a href="tel:123456790">+91-123 4567 890 <span>Mon-Fri 9am - 6pm</span>
+						<div class="contact-detail">
+							<a href="tel:+13105963004">+1 (310) 596 3004 <span>Mon - Fri: 9am - 6pm</span>
 							</a> 
 						</div>
 					</div>
-					<div class="media mt15">
-						<div class="icondive">
-							<img src="images/icons/whatsapp.svg" alt="icon">
+					<div class="contact-info mt15">
+						<div class="contact-icon">
+							<i class="fa-solid fa-mobile-screen contact-icons"></i>
 						</div>
-						<div class="media-body getintouchinfo">
-							<a href="tel:123456790">+91-123 4567 890 <span>Mon-Fri 9am - 6pm</span></a>
-						</div>
-					</div>
-					<div class="media mt15">
-						<div class="icondive">
-							<img src="images/icons/mail.svg" alt="icon"></div>
-						<div class="media-body getintouchinfo">
-							<a href="mailto:info@website.com">info@website.com <span>Online Support</span></a>
+						<div class="contact-detail">
+							<a href="tel:+442081445577">+44 20 8144 5577 <span>Mon - Fri: 9am - 6pm</span>
+							</a> 
 						</div>
 					</div>
-					<div class="media mt15">
-						<div class="icondive">
-							<img src="images/icons/skype.svg" alt="icon">
+					<div class="contact-info mt15">
+						<div class="contact-icon">
+							<i class="fa-solid fa-mobile-screen contact-icons"></i>
 						</div>
-						<div class="media-body getintouchinfo">
-							<a href="skype:niwax.company?call">Niwax.Company<span>Visit Our Office</span></a>
+						<div class="contact-detail">
+							<a href="tel:+923092221104">+92 309 222 1104 <span>Mon - Fri: 9am - 6pm</span>
+							</a> 
+						</div>
+					</div>
+					<div class="contact-info mt15">
+						<div class="contact-icon">
+							<i class="fa-solid fa-envelope contact-icons"></i>
+						</div>
+						<div class="contact-detail">
+							<a href="mailto:info@futurealiti.com">info@futurealiti.com <span>Online Support</span></a>
+							</a> 
 						</div>
 					</div>
 				</div>
@@ -770,6 +774,7 @@
 	<script async src="js/typer.js"></script>
 	<!--common script file-->
 	<script src="js/main.js"></script>
+	<script src="js/font-awsome.js"></script>
 </body>
 
 </html>
