--- a/blogs.html
+++ b/blogs.html
@@ -546,7 +546,7 @@
 						<div class="isotope_item vrbloglist">
 							<div class="item-image">
 								<a href="augmented-reality-sdks-and-tools-for-ar-development.html">
-                           			<img src="images/blog/metaverse.jpg" alt="Game Design & Game Development" class="img-fluid">
+                           			<img src="images/blog/augmented-reality.jpg" alt="Game Design & Game Development" class="img-fluid">
                         		</a> 
 								<span class="category-blog">
 									<a href="#">AR</a>
@@ -571,7 +571,7 @@
 						<div class="isotope_item vrbloglist">
 							<div class="item-image">
 								<a href="can-augmented-reality-can-be-used-in-the-fashion-industry.html">
-                           			<img src="images/blog/metaverse.jpg" alt="Game Design & Game Development" class="img-fluid">
+                           			<img src="images/blog/augmented-reality-in-fashion-industry.jpg" alt="Game Design & Game Development" class="img-fluid">
                         		</a> 
 								<span class="category-blog">
 									<a href="#">AR</a>
@@ -596,10 +596,11 @@
 						<div class="isotope_item vrbloglist">
 							<div class="item-image">
 								<a href="how-does-ar-and-vr-help-you.html">
-                           			<img src="images/blog/metaverse.jpg" alt="Game Design & Game Development" class="img-fluid">
+                           			<img src="images/blog/ar-and-vr.jpg" alt="Game Design & Game Development" class="img-fluid">
                         		</a> 
 								<span class="category-blog">
 									<a href="#">AR</a>
+									<a href="#">VR</a>
 								</span>
                      		</div>
 							<div class="item-info blog-info">
