--- a/how-does-ar-and-vr-help-you.html
+++ b/how-does-ar-and-vr-help-you.html
@@ -435,7 +435,7 @@
 						</div>
 					</div>
 					<div class="blog-image-set">
-						<img src="images/blog/nft.jpg" alt="NFT" class="img-fluid" />
+						<img src="images/blog/ar-and-vr.jpg" alt="NFT" class="img-fluid" />
 					</div>
 					<div class="blog-content mt30">
 
