--- a/website-development.html
+++ b/website-development.html
@@ -778,7 +778,7 @@
                     <p>Dive into the future with Futurealiti – A custom mobile app development company with unmatched development services and technologies. Unlike conventional mobile applications developers around the globe, we have set ourselves apart with technology beyond imagination. We develop traditional mobile apps for startups and SMBs. For major enterprises, we have incredible technologies such as; Augmented Reality (AR), Virtual Reality (VR), and Mixed Reality (MR) to empower them. Futurealiti is on the mission to evolve businesses and organizations, enabling them to streamline their operations and automate workflows. With alluring designs and impeccable coding, we help brands to push the limit and thrive among the best in the world. Leverage our mobile app development services to ignite your overall digital traction and connect with your target audience efficiently.</p>
                 </div>
                 <div class="col-md-6 my-auto">
-                    <img src="images/service/DTC-4 1.png" alt="" class="img-fluid">
+                    <img src="images/services/DTC-4 1.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
@@ -877,7 +877,7 @@
                     <p class="pt-2"><a href="#"><u>Read the case study</u></a></p>
                 </div>
                 <div class="col-md-6 my-auto">
-                    <img src="images/service/DTC-4 1.png" alt="" class="img-fluid">
+                    <img src="images/services/DTC-4 1.png" alt="" class="img-fluid">
                 </div>
             </div>
         </div>
