--- a/real-estate-app.html
+++ b/real-estate-app.html
@@ -568,7 +568,7 @@
 							<a class="nav-link" data-bs-toggle="pill" href="#pakistan">Pakistan</a>
 					  	</li>
 						<li class="nav-item">
-						  	<a class="nav-link" data-bs-toggle="pill" href="#uae">UAE</a>
+						  	<a class="nav-link" data-bs-toggle="pill" href="#uk">UK</a>
 						</li>
 					</ul>
 					
@@ -588,11 +588,11 @@
 							<p class="text-white pt-3">+92-309-2221104</p>
 							<img src="images/contact/location.png" alt="location">
 						</div>
-						<div id="uae" class="container tab-pane fade">
+						<div id="uk" class="container tab-pane fade">
 							<br>
-							<h3 class="text-white">UAE</h3>
+							<h3 class="text-white">UK</h3>
 							<p class="text-white pt-3">Floor 7, Business Central Tower WA, Dubai Media City</p>
-							<p class="text-white pt-3"></p>
+							<p class="text-white pt-3">+44 20 8144 5577</p>
 							<img src="images/contact/location.png" alt="location">
 						</div>
 					</div>
