--- a/index.html
+++ b/index.html
@@ -1445,6 +1445,8 @@
 						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#backend">Backend</a> </li>
 						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#cms">CMS</a> </li>
 						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#infra">Infra and Devops</a> </li>
+						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#game">Games</a> </li>
+						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#ar-vr">AR/VR</a> </li>
 					</ul>
 					<!-- Tab panes -->
 					<div class="tab-content tech-tab-content">
@@ -2134,20 +2136,20 @@
 				<div class="col-lg-6">
 					<div class="video-testimonials owl-carousel">
 						<div class="video-review" data-tilt data-tilt-max="5" data-tilt-speed="1000">
-							<a class="video-link" href="https://www.youtube.com/watch?v=SZEflIVnhH8?autoplay=1&amp;rel=0">
+							<a class="video-link" href="https://www.youtube.com/watch?v=9TXmrE-zgyo?autoplay=1&amp;rel=0">
 								<img src="images/clients/client-pic.jpg" alt="client" class="img-fluid">
 								<div class="review-vid-details">
 									<div class="-vid-ico"><span class="triangle-play2"></span></div>
-									<p>Cina Cleaves</p>
+									<p>Nwa Abdullah</p>
 								</div>
 							</a>
 						</div>
 						<div class="video-review" data-tilt data-tilt-max="5" data-tilt-speed="1000">
-							<a class="video-link" href="https://www.youtube.com/watch?v=SZEflIVnhH8?autoplay=1&amp;rel=0">
+							<a class="video-link" href="https://www.youtube.com/watch?v=FQdAkdERv9A?autoplay=1&amp;rel=0">
 								<img src="images/clients/client-pic-a.jpg" alt="client" class="img-fluid">
 								<div class="review-vid-details">
 									<div class="-vid-ico"><span class="triangle-play2"></span></div>
-									<p>Jokvch Marlin</p>
+									<p>Habib Uz Zaman Khan</p>
 								</div>
 							</a>
 						</div>
@@ -2343,7 +2345,7 @@
 							<a class="nav-link" data-bs-toggle="pill" href="#pakistan">Pakistan</a>
 					  	</li>
 						<li class="nav-item">
-						  	<a class="nav-link" data-bs-toggle="pill" href="#uae">UAE</a>
+						  	<a class="nav-link" data-bs-toggle="pill" href="#uk">UK</a>
 						</li>
 					</ul>
 					
@@ -2363,11 +2365,11 @@
 							<p class="text-white pt-3">+92-309-2221104</p>
 							<img src="images/contact/location.png" alt="location">
 						</div>
-						<div id="uae" class="container tab-pane fade">
+						<div id="uk" class="container tab-pane fade">
 							<br>
-							<h3 class="text-white">UAE</h3>
+							<h3 class="text-white">UK</h3>
 							<p class="text-white pt-3">Floor 7, Business Central Tower WA, Dubai Media City</p>
-							<p class="text-white pt-3"></p>
+							<p class="text-white pt-3">+44 20 8144 5577</p>
 							<img src="images/contact/location.png" alt="location">
 						</div>
 					</div>
