--- a/index.html
+++ b/index.html
@@ -1445,7 +1445,7 @@
 						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#backend">Backend</a> </li>
 						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#cms">CMS</a> </li>
 						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#infra">Infra and Devops</a> </li>
-						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#game">Games</a> </li>
+						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#games">Games</a> </li>
 						<li class="nav-item"> <a class="nav-link" data-bs-toggle="tab" href="#ar-vr">AR/VR</a> </li>
 					</ul>
 					<!-- Tab panes -->
@@ -1497,46 +1497,6 @@
 									<h4 class="mt-2">XCode</h4>
 								</div>
 								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/unreal-engine-logo.png" alt="Unreal Engine Logo" class="tech-logo">
-									<h4 class="mt-2">Unreal Engine</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/unity-logo.png" alt="Unity Logo" class="tech-logo">
-									<h4 class="mt-2">Unity</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/artoolkit-logo.png" alt="ARToolkit Logo" class="tech-logo">
-									<h4 class="mt-2">ARToolkit</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/photon-logo.png" alt="Photon Logo" class="tech-logo">
-									<h4 class="mt-2">Photon</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/python-logo.png" alt="Python Logo" class="tech-logo">
-									<h4 class="mt-2">Python</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/vuforia-logo.png" alt="Vuforia Logo" class="tech-logo">
-									<h4 class="mt-2">Vuforia</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/arkit-logo.png" alt="ARKit Logo" class="tech-logo">
-									<h4 class="mt-2">ARKit</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/arcore-logo.png" alt="ARCore Logo" class="tech-logo">
-									<h4 class="mt-2">ARCore</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/c-sharp-logo.png" alt="C# Logo" class="tech-logo">
-									<h4 class="mt-2">C#</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/c++-logo.png" alt="C/C++ Logo" class="tech-logo">
-									<h4 class="mt-2">C/C++</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
 									<img src="images/tech/node-red-logo.png" alt="Node-Red Logo" class="tech-logo">
 									<h4 class="mt-2">Node-Red</h4>
 								</div>
@@ -1555,14 +1515,6 @@
 								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
 									<img src="images/tech/tableau-logo.png" alt="Tableau Logo" class="tech-logo">
 									<h4 class="mt-2">Tableau</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/cryengine-logo.png" alt="CRYENGINE Logo" class="tech-logo">
-									<h4 class="mt-2">CRYENGINE</h4>
-								</div>
-								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
-									<img src="images/tech/google-cloud-logo.png" alt="Google Cloud Logo" class="tech-logo">
-									<h4 class="mt-2">Google Cloud</h4>
 								</div>
 								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
 									<img src="images/tech/android-sdk-logo.png" alt="Android SDK Logo" class="tech-logo">
@@ -1687,6 +1639,18 @@
 									<img src="images/tech/node-js-logo.png" alt="Node JS Logo" class="tech-logo">
 									<h4 class="mt-2">Node JS</h4>
 								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div text-center fadeInUp">
+									<img src="images/tech/python-logo.png" alt="Python Logo" class="tech-logo">
+									<h4 class="mt-2">Python</h4>
+								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div text-center fadeInUp">
+									<img src="images/tech/c-sharp-logo.png" alt="C# Logo" class="tech-logo">
+									<h4 class="mt-2">C#</h4>
+								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div text-center fadeInUp">
+									<img src="images/tech/c++-logo.png" alt="C/C++ Logo" class="tech-logo">
+									<h4 class="mt-2">C/C++</h4>
+								</div>
 							</div>
 						</div>
 						<div id="cms" class="container tab-pane fade">
@@ -1716,6 +1680,52 @@
 								<div class="col-6 col-sm-4 col-md-3 col-lg-2 text-center fadeInUp">
 									<img src="images/tech/azure-logo.png" alt="Azure Logo" class="tech-logo">
 									<h4 class="mt-2">Azure</h4>
+								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div text-center fadeInUp">
+									<img src="images/tech/google-cloud-logo.png" alt="Google Cloud Logo" class="tech-logo">
+									<h4 class="mt-2">Google Cloud</h4>
+								</div>
+							</div>
+						</div>
+						<div id="games" class="container tab-pane fade">
+							<br>
+							<div class="row mt-3 d-flex justify-content-center">
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
+									<img src="images/tech/unreal-engine-logo.png" alt="Unreal Engine Logo" class="tech-logo">
+									<h4 class="mt-2">Unreal Engine</h4>
+								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
+									<img src="images/tech/unity-logo.png" alt="Unity Logo" class="tech-logo">
+									<h4 class="mt-2">Unity</h4>
+								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div mt-md-4 mt-lg-4 text-center fadeInUp">
+									<img src="images/tech/cryengine-logo.png" alt="CRYENGINE Logo" class="tech-logo">
+									<h4 class="mt-2">CRYENGINE</h4>
+								</div>
+							</div>
+						</div>
+						<div id="ar-vr" class="container tab-pane fade">
+							<br>
+							<div class="row mt-3 d-flex justify-content-center">
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div text-center fadeInUp">
+									<img src="images/tech/artoolkit-logo.png" alt="ARToolkit Logo" class="tech-logo">
+									<h4 class="mt-2">ARToolkit</h4>
+								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div text-center fadeInUp">
+									<img src="images/tech/photon-logo.png" alt="Photon Logo" class="tech-logo">
+									<h4 class="mt-2">Photon</h4>
+								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div text-center fadeInUp">
+									<img src="images/tech/vuforia-logo.png" alt="Vuforia Logo" class="tech-logo">
+									<h4 class="mt-2">Vuforia</h4>
+								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div text-center fadeInUp">
+									<img src="images/tech/arkit-logo.png" alt="ARKit Logo" class="tech-logo">
+									<h4 class="mt-2">ARKit</h4>
+								</div>
+								<div class="col-6 col-sm-4 col-md-3 col-lg-2 tech-div text-center fadeInUp">
+									<img src="images/tech/arcore-logo.png" alt="ARCore Logo" class="tech-logo">
+									<h4 class="mt-2">ARCore</h4>
 								</div>
 							</div>
 						</div>
@@ -1771,9 +1781,11 @@
 	<!-- Start Key Highlights -->
     <section class="deliver py-3 py-md-3 py-lg-5">
         <div class="container">
-			<div class="row justify-content-md-center">
-				<h2 class="common-heading">Futurealiti Delivers</h2>
+			<div class="row justify-content-center">
+				<div class="col-lg-8">
+					<h2 class="common-heading">Futurealiti Delivers</h2>
 				<p style="text-align: center;">We are actively boosting our international footprint across various industries such as banking, healthcare, real estate, e-commerce, travel, and more. We deliver products to such brands as solarisBank, PAYBACK, DAMAC, Volkswagen, Babbel, Santander, Keller Williams, and Hive.</p>
+				</div>
 			</div>
             <div class="row">
 				<div class="col-12">
@@ -1901,8 +1913,8 @@
 	<!-- Start Technologies -->
 	<section class="technologies py-3 py-md-3 py-lg-5">
 		<div class="container">
-			<div class="row">
-				<div class="col-sm-12 text-center">
+			<div class="row justify-content-center">
+				<div class="col-lg-8 text-center">
 					<h2 class="tti-top">We Partner with the <br>world's technology leaders</h2>
 				</div>
 			</div>
@@ -1991,7 +2003,7 @@
     <section class="why-choose-section py-3 py-md-3 py-lg-5">
         <div class="container">
             <div class="row justify-content-center">
-                <div class="col-sm-12 col-md-10">
+                <div class="col-lg-8">
                     <div class="common-heading ptag">
                         <h2 class="text-white">Why Choose Us</h2>
                         <p class="pb-3 text-white">Along with designing and developing your web presence, we propose business-oriented solutions that fit your needs and speak volumes of your values as a brand. With experienced web developers and digital artisans, you get a state-of-the-art solution with a cutting-edge appeal that engages more people online. Leverage powerful technologies & robust architecture to build a web solution that fulfills your needs under packaged web development services.</p>
@@ -2005,13 +2017,13 @@
 	<!-- Start Blogs -->
     <section class="blogs-section py-3 py-md-3 py-lg-5">
 		<div class="container">
-			<div class="row">
-				<div class="col-lg-12 wow fadeInLeft">
+			<div class="row justify-content-center">
+				<div class="col-lg-8 wow fadeInLeft">
 					<div class="common-heading text-l">
 						<span class="related-blog text-center">Related Blog</span>
 					</div>
 				</div>
-				<div class="col-lg-12 wow fadeInRight py-3 py-md-3 py-lg-5">
+				<div class="col-lg-8 wow fadeInRight py-3 py-md-3 py-lg-5">
 					<h3 class="mb20">Check all the important aspects you need to consider when developing an Android app on our blog.</h3>
 				</div>
 			</div>
