game page updated 2 (30-06-2022)

--- a/game-development.html
+++ b/game-development.html
@@ -961,7 +961,7 @@
 								<h5>Racing</h5>
 							</li>
 							<li>
-								<img src="images/service/sSports1.png" class="game-icon">
+								<img src="images/services/Sports1.png" class="game-icon">
 								<h5>Sports</h5>
 							</li>
 							<li>
@@ -1695,11 +1695,10 @@
 						</div>
 					</div>
 				</div>
-
 			</div>
         </div>
     </div>
-    <!--End Ideal-->
+    <!--End Game Apps-->
 
     <!--Start Tech-->
 	<div class="techonology-used py-3 py-md-3 py-lg-5" id="tech">
@@ -1920,11 +1919,110 @@
             <div class="row justify-content-center">
                 <div class="col-sm-12 col-md-10">
                     <div class="common-heading ptag">
+						<span class="text-white">POWER YOUR IMAGINATION</span>
                         <h2 class="text-white">Why Choose Us</h2>
-                        <p class="pb-3 text-white">Along with designing and developing your web presence, we propose business-oriented solutions that fit your needs and speak volumes of your values as a brand. With experienced web developers and digital artisans, you get a state-of-the-art solution with a cutting-edge appeal that engages more people online. Leverage powerful technologies & robust architecture to build a web solution that fulfills your needs under packaged web development services.</p>
+                        <p class="pb-3 text-white">We provide high-quality game development to clients all around the world. To produce excellent tales and exceptional gaming experiences, our team of tech-savvy game developers goes beyond the frontier of imagination.</p>
                     </div>
                 </div>
             </div>
+			<div class="row">
+				<div class="col-sm-12 col-md-6">
+					<div class="timeline-centered">
+						<article class="timeline-entry">
+							<div class="timeline-entry-inner">
+								<div class="timeline-icon">
+									<img src="images/services/cross_icon.png" alt="App Consultation" class="why-choose-img">
+								</div>
+								<div class="timeline-label">
+									<h4 class="text-white">Cross Platform Support</h4>
+									<p class="text-white">We are famous for developing games across different platforms using a single code-base for iOS, Android, Windows, and Blackberry.</p>
+								</div>
+							</div>
+						</article>
+						<article class="timeline-entry">
+							<div class="timeline-entry-inner">
+								<div class="timeline-icon">
+									<img src="images/services/design_icon.png" alt="App Consultation" class="why-choose-img">
+								</div>
+								<div class="timeline-label">
+									<h4 class="text-white">Design And Animation</h4>
+									<p class="text-white">Our designers and animators create user-friendly top-class graphics of a game to impress players with the game design and animation.</p>
+								</div>
+							</div>
+						</article>
+						<article class="timeline-entry">
+							<div class="timeline-entry-inner">
+								<div class="timeline-icon">
+									<img src="images/services/UIUX_icon.png" alt="App Consultation" class="why-choose-img">
+								</div>
+								<div class="timeline-label">
+									<h4 class="text-white">UI/UX Integration</h4>
+									<p class="text-white">We power up the gaming experience with great UI/UX integration into the game and ensure no glitches while playing the game.</p>
+								</div>
+							</div>
+						</article>
+						<article class="timeline-entry">
+							<div class="timeline-entry-inner">
+								<div class="timeline-icon">
+									<img src="images/services/visuals_icon.png" alt="App Consultation" class="why-choose-img">
+								</div>
+								<div class="timeline-label">
+									<h4 class="text-white">Visuals And Graphics</h4>
+									<p class="text-white">Our visual artists and graphics designers follow the latest graphics demand of players to ensure their addictiveness towards the game.</p>
+								</div>
+							</div>
+						</article>
+					</div>
+				</div>
+				<div class="col-sm-12 col-md-6">
+					<div class="timeline-centered">
+						<article class="timeline-entry">
+							<div class="timeline-entry-inner">
+								<div class="timeline-icon">
+									<img src="images/services/robust_icon.png" alt="App Consultation" class="why-choose-img">
+								</div>
+								<div class="timeline-label">
+									<h4 class="text-white">Robust Game Development</h4>
+									<p class="text-white">We are top-rated for developing bug-free, highly functional, and responsive games to offer players a flawless and amazing gaming experience.</p>
+								</div>
+							</div>
+						</article>
+						<article class="timeline-entry">
+							<div class="timeline-entry-inner">
+								<div class="timeline-icon">
+									<img src="images/services/push_icon.png" alt="App Consultation" class="why-choose-img">
+								</div>
+								<div class="timeline-label">
+									<h4 class="text-white">Push Notification Support</h4>
+									<p class="text-white">We leverage the push notification feature with exciting alerts to preserve players' interest and engagement.</p>
+								</div>
+							</div>
+						</article>
+						<article class="timeline-entry">
+							<div class="timeline-entry-inner">
+								<div class="timeline-icon">
+									<img src="images/services/social_icon.png" alt="App Consultation" class="why-choose-img">
+								</div>
+								<div class="timeline-label">
+									<h4 class="text-white">Social Media Integration</h4>
+									<p class="text-white">Itis essential to connect gamers to increase users, and we do it the right way with seamless social media integration.</p>
+								</div>
+							</div>
+						</article>
+						<article class="timeline-entry">
+							<div class="timeline-entry-inner">
+								<div class="timeline-icon">
+									<img src="images/services/monitization_icon.png" alt="App Consultation" class="why-choose-img">
+								</div>
+								<div class="timeline-label">
+									<h4 class="text-white">Monetization Of The Game</h4>
+									<p class="text-white">We create result-driven monetization strategies for the game, including in-app purchases and ads.</p>
+								</div>
+							</div>
+						</article>
+					</div>
+				</div>
+			</div>
         </div>
     </section>
     <!-- End Why Choose -->
